; ModuleID = '/home/carl/AnghaBench/reactos/ntoskrnl/kd/wrappers/extr_gdbstub_powerpc.c_GspLong2Hex.c'
source_filename = "/home/carl/AnghaBench/reactos/ntoskrnl/kd/wrappers/extr_gdbstub_powerpc.c_GspLong2Hex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GspLong2Hex(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = ashr i32 %7, 0
  %9 = and i32 %8, 255
  %10 = shl i32 %9, 24
  %11 = load i32, i32* %5, align 4
  %12 = ashr i32 %11, 8
  %13 = and i32 %12, 255
  %14 = shl i32 %13, 16
  %15 = or i32 %10, %14
  %16 = load i32, i32* %5, align 4
  %17 = ashr i32 %16, 16
  %18 = and i32 %17, 255
  %19 = shl i32 %18, 8
  %20 = or i32 %15, %19
  %21 = load i32, i32* %5, align 4
  %22 = ashr i32 %21, 24
  %23 = and i32 %22, 255
  %24 = shl i32 %23, 0
  %25 = or i32 %20, %24
  store i32 %25, i32* %6, align 4
  %26 = ptrtoint i32* %6 to i32
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @FALSE, align 4
  %30 = call i32 @GspMem2Hex(i32 %26, i32 %28, i32 4, i32 %29)
  %31 = load i32*, i32** %4, align 8
  store i32 %30, i32* %31, align 4
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @GspMem2Hex(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
